--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   },
   "dependencies": {
     "express": "4.19.0",
-    "discord.js": "14.17.0",
     "node-fetch": "2.6.12",
-    "dotenv": "16.4.0"
+    "dotenv": "16.4.0",
+    "firebase-admin": "12.6.0"
   },
   "engines": {
-    "node": ">=18"
+    "node": "18.x"
   }
 }
