--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 {
-  "name": "discord-user-japi-style",
+  "name": "nitro-api",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "4.19.0",
-    "node-fetch": "2.6.12",
-    "dotenv": "16.4.0",
-    "firebase-admin": "12.6.0"
-  },
-  "engines": {
-    "node": "18.x"
+    "dotenv": "^16.4.0",
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2"
   }
 }
